k8s/overlays/dev/use-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  template:
    spec:
      volumes:
        - name: config
          configMap:
            name: gateway-service-config
      containers:
        - name: gateway-service
          args:
            - --spring.config.location=/etc/config/application.yaml
          volumeMounts:
            - mountPath: /etc/config
              name: config
